@@ -101,9 +101,18 @@ try:
     myGraph.add(myPie)
     myGraph.draw("Graph_mix_OT.png")
 
-   # Check that the correct files have been generated by computing their
-   # checksum
+    # Set new colors
+    myGraph.setColors(["red", "green", "#120345"])
 
+    # Test empty new colors
+    myGraph.setColors([])
+    
+    # Set new legends
+    myGraph.setLegends(["item1", "item2", "item3"])
+
+    # Test empty new legends
+    myGraph.setLegends([])
+    
 except:
     import sys
     print("t_Graph_mix.py", sys.exc_info()[0], sys.exc_info()[1])
