@@ -60,6 +60,7 @@
  * #962 (The doc of MetaModelValidation.computePredictivityFactor is wrong)
  * #964 (Study does not load LogNormalMuSigma variables from XML)
  * #965 (A RandomVector from a RandomVector can make OT crash)
+ * #968 (Empty legend make OT crash)
 
 == 1.11 release (2018-05-11) == #release-1.11
 
